--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -158,7 +158,7 @@ header{
   margin: 0 12px 0 3px;
   width: 45px;
   height: 45px;
-  background: url(../imgs/header-logo.png) no-repeat 50% 50%;
+  background: url(../imgs/icon.png) no-repeat 50% 50%;
   background-size: cover;
 }
 .header-title{
@@ -197,10 +197,20 @@ header{
   color: #707070;
 }
 .search-item>.item-img{
-  background: url(../imgs/search-hospital.png) no-repeat 50% 100%;
-  background-size: auto 100%;
   height: 45px;
   margin: 6px 0;
+}
+.search-list a:nth-of-type(1)>.search-item>.item-img{
+  background: url(../imgs/hospital.svg) no-repeat 50% 100%;
+  background-size: auto 100%;
+}
+.search-list a:nth-of-type(2)>.search-item>.item-img{
+  background: url(../imgs/group.svg) no-repeat 50% 0;
+  background-size: auto 90%;
+}
+.search-list a:nth-of-type(3)>.search-item>.item-img{
+  background: url(../imgs/server.svg) no-repeat 50% 100%;
+  background-size: auto 100%;
 }
 /*end search-body*/
 
