--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -29,6 +29,7 @@ body{
   color:#0070c9;
   font-size: 0.9em;
 }
+
 header{
   height: 44px;
   width: 100%;
@@ -147,7 +148,7 @@ header{
   box-shadow: 2px 2px 5px #e3e3e3;
   border-bottom: 2px solid #4caf50;
 }
-/*search-header*/
+
 .search-header{
   border-bottom: 1px solid #d6d6d6;
   padding-bottom: 10px;
@@ -169,8 +170,9 @@ header{
   font-size: 1.2em;
   line-height: 1.6em;
   color: #707070;
+  padding-left: 60px;
 }
-/*search-body*/
+
 .search-body{
   padding: 5px 10px 5px 12px;
 }
@@ -214,6 +216,193 @@ header{
 }
 /*end search-body*/
 
+/*hospital-group*/
+.hospital-group{
+  width: 100%;
+  background: #eee;
+  position: relative;
+}
+.group-toggle{
+  width: 100%;
+  height: 55px;
+  display: inline-block;
+  background-color: red;
+  position: relative;
+}
+.icon-plus{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: red;
+  display: inline-block;
+  background: url(../group_imgs/line.png) no-repeat center center;
+  background-size: 100%;
+}
+.icon-plus:nth-of-type(1){
+  transform: rotate(45deg);
+}
+.icon-plus:nth-of-type(2){
+  transform: rotate(-45deg);
+}
+.toggle-button{
+  border: 0;
+  outline: 0;
+  display: block;
+  position: relative;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: rgba(100  , 100, 100, 0.8);
+  margin: 10px auto;
+}
+.close{
+  animation: close 0.5s linear alternate;
+}
+.open{
+  animation: open 0.3s ease-out alternate;
+}
+@keyframes close {
+  0%{
+    opacity: 1;
+    transform: rotate(0) scale(1);
+  }
+  100%{
+    opacity: 0.2;
+    transform: rotate(-45deg) scale(0.6);
+  }
+}
+@keyframes open {
+  100%{
+    opacity: 1;
+    transform: rotate(0) scale(1);
+  }
+  0%{
+    opacity: 0.2;
+    transform: rotate(-45deg) scale(0.6);
+  }
+}
+.hospital-container{
+  /*position: absolute;*/
+  /*top: 64px;*/
+}
+.group-container{
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 6px;
+  padding-top: 12px;
+  /*position: absolute;
+  top: 64px;*/
+}
+.group-list{
+  width: 100%;
+}
+.group-list a{
+  display: inline-block;
+  width: 25%;
+  float: left;
+}
+.group-item{
+  width: 100%;
+  height: auto;
+}
+.group-item .item-icon{
+  display: block;
+  margin: 0 auto 10px;
+  width: 36%;
+  padding-bottom: 36%;
+  background-size: 100% 100%;
+}
+.group-item .item-title{
+  text-align: center;
+  margin-top: 5px;
+  color: #707070;
+}
+.group-list a:nth-of-type(1)>.group-item>.item-icon{
+  background: url(../group_imgs/bone.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(2)>.group-item>.item-icon{
+  background: url(../group_imgs/child.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(3)>.group-item>.item-icon{
+  background: url(../group_imgs/female.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(4)>.group-item>.item-icon{
+  background: url(../group_imgs/mouth.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(5)>.group-item>.item-icon{
+  background: url(../group_imgs/male.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(6)>.group-item>.item-icon{
+  background: url(../group_imgs/xxg.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(7)>.group-item>.item-icon{
+  background: url(../group_imgs/xh.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(8)>.group-item>.item-icon{
+  background: url(../group_imgs/pf.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(9)>.group-item>.item-icon{
+  background: url(../group_imgs/sj.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(10)>.group-item>.item-icon{
+  background: url(../group_imgs/ebh.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(11)>.group-item>.item-icon{
+  background: url(../group_imgs/mn.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(12)>.group-item>.item-icon{
+  background: url(../group_imgs/sjw.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(13)>.group-item>.item-icon{
+  background: url(../group_imgs/rxw.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(14)>.group-item>.item-icon{
+  background: url(../group_imgs/y.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(15)>.group-item>.item-icon{
+  background: url(../group_imgs/p.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(16)>.group-item>.item-icon{
+  background: url(../group_imgs/gr.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(17)>.group-item>.item-icon{
+  background: url(../group_imgs/zx.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(18)>.group-item>.item-icon{
+  background: url(../group_imgs/f.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(19)>.group-item>.item-icon{
+  background: url(../group_imgs/w.png) no-repeat center center;
+  background-size: cover;
+}
+.group-list a:nth-of-type(20)>.group-item>.item-icon{
+  background: url(../group_imgs/fx.png) no-repeat center center;
+  background-size: cover;
+}
+.hospital-group .hospital-list a{
+  border: 0;
+}
+/*hospital-group end*/
 .title{
   width: 100%;
   border-bottom: 1px solid #e8e8e8;
