add multiple menu

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  /*color: #333;*/
   box-sizing: border-box;
   text-decoration: none;
   list-style-type: none;
@@ -16,6 +17,29 @@ body{
   min-width: 320px;
   background-color: #f2f2f2;
   font-size: 12px;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-overflow-scrolling: touch;
+  overflow-scrolling: touch;
+  -webkit-text-size-adjust: 100%;
+  background-color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+*::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+*::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  background: rgba(78,78,78,0.5);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+*::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
 }
 ::-moz-placeholder{
    color: #0070c9;
@@ -346,19 +370,19 @@ header{
   background-size: cover;
 }
 
-.group-container{
+.hot-group-container{
   width: 100%;
   margin: 0 auto;
   border-radius: 6px;
 }
-.group-list{
+.hot-group-container .group-list{
   width: 100%;
   float: left;
   padding-bottom: 30px;
   /*background: linear-gradient(180deg, #f3f9ff, #67a8e4, #7ab9e4 80%, #fff);*/
   background: linear-gradient(180deg, #fff, #7ab9e4, #67a8e4 70%, rgba(242, 248, 253, 0.1));
 }
-.group-list a{
+.hot-group-container .group-list a{
   display: inline-block;
   width: 25%;
   float: left;
@@ -367,100 +391,100 @@ header{
   margin-left: 1px;
   border-bottom: 1px solid rgba(255,255,255,0.52);
 }
-.group-item{
+.hot-group-container .group-item{
   width: 100%;
   height: auto;
   margin: 15px 0;
 }
-.group-item .item-icon{
+.hot-group-container .group-item .item-icon{
   display: block;
   margin: 0 auto 10px;
   width: 36%;
   padding-bottom: 36%;
   background-size: 100% 100%;
 }
-.group-item .item-title{
+.hot-group-container .group-item .item-title{
   text-align: center;
   margin-top: 5px;
   color: #fff;
 }
-.group-list a:nth-of-type(1)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(1)>.group-item>.item-icon{
   background: url(../group_imgs/bone.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(2)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(2)>.group-item>.item-icon{
   background: url(../group_imgs/child.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(3)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(3)>.group-item>.item-icon{
   background: url(../group_imgs/female.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(4)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(4)>.group-item>.item-icon{
   background: url(../group_imgs/mouth.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(5)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(5)>.group-item>.item-icon{
   background: url(../group_imgs/male.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(6)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(6)>.group-item>.item-icon{
   background: url(../group_imgs/xxg.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(7)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(7)>.group-item>.item-icon{
   background: url(../group_imgs/xh.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(8)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(8)>.group-item>.item-icon{
   background: url(../group_imgs/pf.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(9)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(9)>.group-item>.item-icon{
   background: url(../group_imgs/sj.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(10)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(10)>.group-item>.item-icon{
   background: url(../group_imgs/ebh.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(11)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(11)>.group-item>.item-icon{
   background: url(../group_imgs/mn.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(12)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(12)>.group-item>.item-icon{
   background: url(../group_imgs/sjw.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(13)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(13)>.group-item>.item-icon{
   background: url(../group_imgs/rxw.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(14)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(14)>.group-item>.item-icon{
   background: url(../group_imgs/y.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(15)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(15)>.group-item>.item-icon{
   background: url(../group_imgs/p.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(16)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(16)>.group-item>.item-icon{
   background: url(../group_imgs/gr.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(17)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(17)>.group-item>.item-icon{
   background: url(../group_imgs/zx.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(18)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(18)>.group-item>.item-icon{
   background: url(../group_imgs/f.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(19)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(19)>.group-item>.item-icon{
   background: url(../group_imgs/w.png) no-repeat center center;
   background-size: cover;
 }
-.group-list a:nth-of-type(20)>.group-item>.item-icon{
+.hot-group-container .group-list a:nth-of-type(20)>.group-item>.item-icon{
   background: url(../group_imgs/fx.png) no-repeat center center;
   background-size: cover;
 }
@@ -603,6 +627,7 @@ header{
   text-overflow: ellipsis;
   overflow: hidden;
   padding-left: 10px;
+  padding-right: 10px;
   line-height: 20px;
   margin-top: 5px;
 }
@@ -614,13 +639,14 @@ header{
 }
 /*doctor-list-partial-house-call*/
 .act-open{
-  white-space: normal;
+  white-space: normal!important;
   height: auto;
 }
 .house-call{
   display: none;
   overflow: hidden;
 }
+
 .house-call .slick-dots{bottom: -35px;}
 .house-call .slick-dots li{
   width: 10px;
@@ -631,9 +657,8 @@ header{
 }
 .call-container{
   width: 100%;
-  padding: 0 10px 0 10px;
+  padding: 10px 10px 30px 10px;
   background-color: #fff;
-  padding-bottom: 30px;
 }
 .call-container figcaption{
   text-align: center;
@@ -680,6 +705,11 @@ header{
   text-align: center;
   line-height: normal;
 }
+.cell-item table thead td p{
+  color: #333;
+  font-size: 10px;
+  font-weight: 300;
+}
 .cell-item table thead td p:nth-of-type(2){
   line-height: 1.5em;
 }
@@ -702,10 +732,10 @@ td > .green{
   border-radius: 50px;
   border: 3px solid rgb(43, 161, 245);
   padding: 8px 3px;
-  color: white;
   vertical-align: bottom;
   cursor: pointer;
 }
+/*doctor-list house-call end*/
 /*doctor-list end*/
 
 /*hospital-list*/
@@ -757,4 +787,89 @@ td > .green{
 }
 .hospital-item .item-phone{
   margin-top: 4px;
+}
+
+/*hospital-department-partial-list*/
+.hospital-department{
+  width: 100%;
+  display: none;
+  overflow: hidden;
+}
+.department-container{
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 6px;
+}
+.department-list{
+  width: 100%;
+  white-space: nowrap;
+  overflow-x: scroll;
+  padding: 15px 0;
+  background: linear-gradient(180deg, #fff, #7ab9e4, #67a8e4 70%, rgba(242, 248, 253, 0.1));
+}
+.department-item{
+  width: 80px;
+  height: 80px;
+  display: inline-block;
+  border: 1px solid rgba(255,255,255,0.5);
+  border-radius: 15px;
+  margin: 5px;
+  margin-left: 0;
+}
+.department-item .item-icon{
+  display: block;
+  margin: 10px auto;
+  width: 45%;
+  padding-bottom: 45%;
+  /*background-size: 100% 100%;*/
+}
+.department-item .item-title{
+  text-align: center;
+  margin-top: 5px;
+  color: #fff;
+}
+.department-list>.department-item:nth-of-type(1) .item-icon{
+  background: url(../group_imgs/bone.png) no-repeat center center;
+  background-size: cover;
+}
+.department-list>.department-item:nth-of-type(2) .item-icon{
+  background: url(../group_imgs/child.png) no-repeat center center;
+  background-size: cover;
+}
+.department-list>.department-item:nth-of-type(3) .item-icon{
+  background: url(../group_imgs/female.png) no-repeat center center;
+  background-size: cover;
+}
+.department-list>.department-item:nth-of-type(4) .item-icon{
+  background: url(../group_imgs/mouth.png) no-repeat center center;
+  background-size: cover;
+}
+.department-list>.department-item:nth-of-type(5) .item-icon{
+  background: url(../group_imgs/male.png) no-repeat center center;
+  background-size: cover;
+}
+.department-list>.department-item:nth-of-type(6) .item-icon{
+  background: url(../group_imgs/xxg.png) no-repeat center center;
+  background-size: cover;
+}
+.department-list>.department-item:nth-of-type(7) .item-icon{
+  background: url(../group_imgs/xh.png) no-repeat center center;
+  background-size: cover;
+}
+.department-list>.department-item:nth-of-type(8) .item-icon{
+  background: url(../group_imgs/pf.png) no-repeat center center;
+  background-size: cover;
+}
+.department-list>.department-item:nth-of-type(9) .item-icon{
+  background: url(../group_imgs/sj.png) no-repeat center center;
+  background-size: cover;
+}
+.department-list>.department-item:nth-of-type(10) .item-icon{
+  background: url(../group_imgs/ebh.png) no-repeat center center;
+  background-size: cover;
+}
+/*department-list > hospital-list > doctor*/
+.hospital-list .doctor{
+  display: none;
+  overflow: hidden;
 }
