--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -805,16 +805,20 @@ td > .green{
   white-space: nowrap;
   overflow-x: scroll;
   padding: 15px 0;
-  background: linear-gradient(180deg, #fff, #7ab9e4, #67a8e4 70%, rgba(242, 248, 253, 0.1));
+  background: linear-gradient(180deg, #7ab9e4, #67a8e4 80%, rgba(242, 248, 253, 0.1));
 }
 .department-item{
   width: 80px;
   height: 80px;
   display: inline-block;
-  border: 1px solid rgba(255,255,255,0.5);
+  /*border: 1px solid rgba(255,255,255,0.5);*/
   border-radius: 15px;
   margin: 5px;
   margin-left: 0;
+  transition: all 0.3s linear;
+}
+.department-item-act{
+  background-color: #0e1435;
 }
 .department-item .item-icon{
   display: block;
