--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -1,4 +1,4 @@
-* {
+*{
   padding: 0;
   margin: 0;
   /*color: #333;*/
@@ -314,6 +314,7 @@ header{
     transform: rotate(-45deg) scale(0.6);
   }
 }
+
 .hospital-container{
   /*position: absolute;*/
   /*top: 64px;*/
@@ -786,6 +787,13 @@ td > .green{
 .hospital-item .item-title{
   color: #333;
 }
+.hospital-item .flag{
+  border: 1px solid #dedede;
+  padding: 1px 4px;
+  border-radius: 10px;
+  margin-left: 10px;
+  box-shadow: 2px 1px 4px 1px #87c5da;
+}
 .hospital-item .item-phone{
   margin-top: 4px;
 }
@@ -895,7 +903,7 @@ td > .green{
   white-space: nowrap;
   overflow-x: auto;
   padding-bottom: 5px;
-  background: linear-gradient(180deg, #7ab9e4, #67a8e4 80%, rgba(242, 248, 253, 0.1));
+  background: linear-gradient(180deg, #7ab9e4, #67a8e4);
 }
 .project-item{
   width: 90px;
@@ -908,7 +916,7 @@ td > .green{
   transition: all 0.3s linear;
 }
 .project-item-act{
-  background-color: #0e1435;
+  background-color: #5b68c1;
 }
 .project-item .item-icon{
   display: block;
